# 360_visual_inertial_odometry

./: .gitignore  CMakeLists.txt  README.md  build.sh
app/: main.cpp
config/: default_config.yaml
document/: initialization_implementation.tex
src/: Camera.cpp  Camera.h  ConfigUtils.cpp  Feature.cpp  Feature.h  FeatureTracker.cpp  FeatureTracker.h  Frame.cpp  Frame.h  LieUtils.h
src/core/: IMUData.h
src/database/: Camera.cpp  Camera.h  Feature.cpp  Feature.h  Frame.cpp  Frame.h  MapPoint.cpp  MapPoint.h
src/optimization/: Factors.cpp  Factors.h  Optimizer.cpp  Optimizer.h  Parameters.cpp  Parameters.h
src/processing/: Estimator.cpp  Estimator.h  FeatureTracker.cpp  FeatureTracker.h  IMUPreintegrator.cpp  IMUPreintegrator.h  Initializer.cpp  Initializer.h
src/util/: ConfigUtils.cpp  ConfigUtils.h  LieUtils.cpp  LieUtils.h  Logger.h  VizUtils.cpp  VizUtils.h
